change URL of gitmodules
Related issues on hakoniwa-ros2sim:
https://github.com/toppers/hakoniwa-ros2sim/issues/3
https://github.com/toppers/hakoniwa-ros2sim/issues/6

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "multiplay-local/main"]
 	path = multiplay-local/main
-	url = git@github.com:toppers/hakoniwa-ros-simulator.git
+	url = https://github.com/toppers/hakoniwa-ros2sim.git
 [submodule "multiplay-photon/photon"]
 	path = multiplay-photon/photon
-	url = git@github.com:toppers/hakoniwa-ros-simulator.git
+	url = https://github.com/toppers/hakoniwa-ros2sim.git
